Done adding acknowledgments

--- a/secs/0-front/3-acknowledgments.tex
+++ b/secs/0-front/3-acknowledgments.tex
@@ -1,17 +1,9 @@
-% Acknowledgements page is optional but most theses include
-% a brief statement of appreciation or recognition of special
-% assistance.
-\ifthenelse{\boolean{quick-or-debug}}{}
-{
 \begin{acknowledgments}
+I would like to acknowledge the support of my co-advisors, Professor Bin Yao and Professor Peter H. Meckl, for their consistent guidance, insights, and feedback throughout my PhD studies. I am deeply thankful to Professor Bin Yao for training me in control theory and for his continual encouragement and advice, which were instrumental in bringing this research together. I am grateful for the opportunity to pursue my PhD under his mentorship. I also wish to thank Professor Peter H. Meckl for his steadfast guidance and inspiration in shaping the SCR-ASC modeling and diagnostic research. His support through Research Assistantships during most of my PhD made this work possible. I appreciate his constructive feedback, which was essential in developing my thesis research.
 
-The author gratefully acknowledges the constant support and guidance provided by the three co-advisors, Prof. Bin Yao, Prof. Richard Voyles, and Prof. Peter H. Meckl. Prof. Voyles is sincerely thanked for providing hardware and lab space, and for his guidance in developing a workable research problem related to the Dexterous Hexrotor, as well as for his help in addressing numerous hardware and software debugging challenges. Prof. Meckl is deeply appreciated for his consistent guidance and inspiration in formulating the research problem on SCR--ASC modelling and diagnostics, and for his generous support through Research Assistantships over the past 1.5 years. Finally, the author expresses heartfelt thanks to Prof. Bin Yao for his training and advising in control theory and for his constant encouragement and insight in bringing these research efforts together under a unified framework.
+I would like to thank Professor Richard Voyles for providing hardware and laboratory support, as well as for assisting in defining a practical and meaningful research problem related to the Dexterous Hexrotor, my initial project during the PhD program. I am also grateful to Professor George Chiu for his time, thorough review, and valuable suggestions, which enhanced the quality and clarity of this thesis. I would also like to thank the School of Mechanical Engineering for providing TA support during the initial part of my PhD studies.
 
-The author would also like to thank the members of the thesis committee---Prof. Bin Yao, Prof. Peter H. Meckl, Prof. Richard Voyles, and Prof. George Chiu---for their time, feedback, and invaluable suggestions that strengthened the quality and clarity of this work.
+I am sincerely grateful to Cummins Inc. for providing the data and sponsorship that enabled the SCR-ASC studies. I especially thank David Schmidt for his detailed discussions regarding system architectures, testing procedures, and truck data, which significantly influenced the modeling and diagnostic work. I also appreciate the support, insights, and collaboration of Adam Kidd, Larry Brunner, Tom Nelson, and Lyle Kocher throughout the project. I would like to acknowledge the foundational contributions of Kaushal Kamal Jain, whose earlier work established important groundwork for this research.
 
-Special thanks are due to Cummins Inc. for providing the data and sponsorship that made the SCR--ASC studies possible. The author is particularly grateful to David Schmidt for detailed discussions on SCR--ASC system architectures, testing procedures, and truck data conditions, which greatly helped in shaping the modelling and diagnostic approaches. Additional thanks go to Adam Kidd, Larry Brunner, Tom Nelson, and Lyle Kocher for their support, insights, and assistance throughout various stages of this collaboration.
-
-The author acknowledges with appreciation the foundational work of Kaushal Kamal Jain, whose earlier contributions laid important groundwork for the present research. Finally, the author extends deep gratitude to friends and family for their unwavering encouragement, patience, and understanding, without which this thesis would not have been possible.
-
+Finally, I want to thank my friends and family, especially my wife Shruthi, for their unwavering encouragement, patience, and understanding. Their constant support has been invaluable, and this accomplishment would not have been possible without them.
 \end{acknowledgments}
-}
