Completed the thesis.

--- a/secs/n-back/0-end.tex
+++ b/secs/n-back/0-end.tex
@@ -2,3 +2,4 @@
 % Currently commented out (depends on if using BibLaTeX)
 \input{./secs/n-back/1-show-bib.tex}
 \input{./secs/n-back/2-vita.tex}
+\input{./secs/n-back/3-pubs.tex}
