--- a/secs/n-back/2-vita.tex
+++ b/secs/n-back/2-vita.tex
@@ -1,3 +1,3 @@
 \begin{vita}
-
+Sesha Charla is from Hyderabad, India. He received his Bachelor of Technology degree in Aerospace Engineering from Indian Institute of Space Science and Technology in May 2016. Following graduation, he worked for three years as a Scientist/Engineer in Test Instrumentation and Controls at Indian Space Research Organisation, contributing to thermal systems and satellite testing programs. He then pursued graduate studies at Purdue University, earning a Master of Science in Aeronautics and Astronautics before continuing toward a Ph.D. in Mechanical Engineering with a focus on control, estimation, and diagnostics. He is currently a System Analyst in Robotic Algorithms and Controls at Intuitive Surgical.
 \end{vita}
