spell check and added blank pages for corrections

--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -73,7 +73,7 @@
 \end{symbols}
 
 % =============================================================
-
+\blankpage
 \begin{abbreviations}
         A, B, C, D \ampeq  Different truck IDs used in the experimental data sets \\
         AG \ampeq  Aged \\
@@ -105,6 +105,7 @@
 
 % =============================================================
 % Names of the things I created
+\blankpage
 \begin{nomenclature}
         Drive Segment   \ampeq  Truck data that is contiguous in time.\\
         Flow-normalized inlet $NO_x$ concentration \ampeq $u_{1F}(k) = \sfrac{u_{1}(k)}{F(k)}$ \\
