--- a/secs/2-data/0-subs/0-2_truck_data.tex
+++ b/secs/2-data/0-subs/0-2_truck_data.tex
@@ -48,7 +48,7 @@ be recovered through interpolation.
         \label{tab::truck_data_mileage}
         \begin{tabular}{c c c c}
         \hline \hline
-         Truck    & Earlier Data & Latter Data & Milage \\
+         Truck    & Earlier Data & Latter Data & Mileage \\
          Code     &  Year            & Year    & Difference\\ \hline \hline
         ADT & $2015$ & $2017$ & $2.8 \times 10^5$\\
         MES & $2015$ & $2018$ & $11.9 \times 10^5$\\
