--- a/secs/2-data/4-data_preproc.tex
+++ b/secs/2-data/4-data_preproc.tex
@@ -24,8 +24,8 @@ Test-cell and truck data are preprocessed prior to system identification and val
 
         \item \itbf{Generating Drive Segments (Truck Data)}: Smoothed truck data are partitioned into drive segments,
                 defined as contiguous data intervals without breaks. These segments differ from drive cycles, as they do
-                not necessarily correspond to engine-on/off events and do not have a maximum length of 4 hours. Morever,
-                the drive segments are not repatable unlike drive cycles.
+                not necessarily correspond to engine-on/off events and do not have a maximum length of 4 hours. Moreover,
+                the drive segments are not repeatable unlike drive cycles.
 
         \item \itbf{Calculating Functions of Measured Signals}: After smoothing, quantities directly used in the model,
                 which are linear or nonlinear functions of the measurement signals, are calculated. These quantities
