--- a/secs/2-data/trk_filt/sig_ranges.tex
+++ b/secs/2-data/trk_filt/sig_ranges.tex
@@ -1,12 +1,12 @@
 \subsection{Truck Data Signal Ranges}
-The ranges of the measurement signals are tabulated bellow:
+The ranges of the measurement signals are tabulated below:
 \begin{table}[H]
 \centering
 \begin{tabular}{c c c c c c}
 \hline \hline
 Variable & Units & & & & \\
 \hline \hline
-Degreend Data & & adt\_15 & mes\_15 & wer\_15 & trw\_15 \\ \hline
+Degreened Data & & adt\_15 & mes\_15 & wer\_15 & trw\_15 \\ \hline
 $T$   & $+200 \, ^0C$ & [135.71, -79.68]& [116.91, -93.05]& [98.7, -142.85]& [125.21, -169.55]
 \\
 $F$   & $g/s$ & [425.94, 15.82]& [529.08, 0.0]& [386.51, 0.0]& [559.86, 0.0]
