--- a/secs/2-data/tst_filt/sig_ranges.tex
+++ b/secs/2-data/tst_filt/sig_ranges.tex
@@ -1,12 +1,12 @@
 \subsection{Test Data Signal Ranges}
-The ranges of the measurement signals are tabulated bellow:
+The ranges of the measurement signals are tabulated below:
 \begin{table}[H]
 \centering
 \begin{tabular}{c c c c c}
 \hline \hline
 Variable & Units & & & \\
 \hline \hline
-Degreend Data & & Cold FTP & Hot FTP & RMC\\ \hline
+Degreened Data & & Cold FTP & Hot FTP & RMC\\ \hline
 $T$   & $+200 \, ^0C$ & [60.96, -174.0] & [67.38, -64.7] & [148.76, 43.76]
 \\
 $F$   & $g/s$ & [439.04, 0.0]& [431.14, 0.0]& [403.84, 32.65]
