--- a/secs/3-governing_eqns/3-NOx_proc_dyn.tex
+++ b/secs/3-governing_eqns/3-NOx_proc_dyn.tex
@@ -1,7 +1,7 @@
 \section{$NO_x$ Process Dynamics}
 
 The $NO_x$ process dynamics involve only the selective catalytic reduction reaction. The gaseous $NO_x$ that enters the
-catalyst chamber reacts with the adsorbed ammonia on the surface and forms $N_2$ and $H_2O$ (Eiley-Rideal Mechanism).
+catalyst chamber reacts with the adsorbed ammonia on the surface and forms $N_2$ and $H_2O$ (Eley-Rideal Mechanism).
 The process frees up the adsorption sites for the next cycle of gaseous ammonia. The reaction rate is proportional to
 the volumetric concentration of the gaseous $NO_x$ and the surface concentration of the adsorbed ammonia.
 \begin{align}
