--- a/secs/n-conclusion/0_subs/1_contrib.tex
+++ b/secs/n-conclusion/0_subs/1_contrib.tex
@@ -25,7 +25,7 @@ The main contributions of this thesis are summarized below.
           \item a recursive dynamic model that is linear in parameters, reducing the estimation problem to convex
                   optimization;
           \item a linear programming formulation for saturated-catalyst parameters that minimizes the area under the
-                  $NO_x$ reduction per time step under saturation'' curve, subject to lower bounds imposed by the actual
+                  $NO_x$ reduction per time step under saturation curve, subject to lower bounds imposed by the actual
                     observed $NO_x$ reduction;
           \item a data-driven method to identify saturated and unsaturated segments, enabling separate estimation of
                   parameters in each regime; and
