--- a/secs/0-front/0-front.tex
+++ b/secs/0-front/0-front.tex
@@ -1,15 +1,20 @@
 
 % Only include these sections if this is a proof or final version
 \ifthenelse{\boolean{quick}}{}{
+    \blankpage
     \input{./secs/0-front/1-comittee.tex}
+    \blankpage
     \input{./secs/0-front/2-dedication.tex}
+    \blankpage
     \input{./secs/0-front/3-acknowledgments.tex}
+    \blankpage
     % \input{./secs/0-front/4-preface.tex}
     %
     \setcounter{tocdepth}{2}
     \pdfbookmark{TABLE OF CONTENTS}{Contents}
     \tableofcontents
     \listoftables
+    \blankpage
     \listoffigures
     % ===
     \input{./secs/0-front/6-symbols.tex}
@@ -18,6 +23,7 @@
 % Optional: Symbols, Abbreviations, Nomenclature, Glossary
 
 % Always include the abstract
+\blankpage
 \input{./secs/0-front/5-abstract.tex}
 
 % For the official template
