--- a/thesis.tex
+++ b/thesis.tex
@@ -29,10 +29,13 @@
 \maketitle
 \include{./secs/0-front/0-front.tex}  % Front matter (title, acknowledgements, abstract, etc)
 % ============================================================
+\blankpage
 \include{./secs/1-intro/0-intro.tex}
 \include{./secs/2-data/0-data.tex}
 \include{./secs/3-governing_eqns/0-governing_eqns.tex}
+\blankpage
 \include{./secs/4-NOx_mdl/0-NOx_mdl.tex}
+\blankpage
 \include{./secs/5-sat_detect/0-sat_detect.tex}
 \include{./secs/n-conclusion/0-conclusion.tex}
 % =============================================================
