Changed a figure name

--- a/secs/n-conclusion/0-conclusion.tex
+++ b/secs/n-conclusion/0-conclusion.tex
@@ -17,7 +17,7 @@ Figure~\ref{fig::problems_solved}.
 \begin{figure}[!ht]
         \centering
         \includegraphics[width=0.9\textwidth]{./figs/n-conclusion/problems_solved.png}
-        \caption{Motivations for the discrete switched nonlinear model and the resulting model features}
+        \caption{Discrete switched nonlinear model development}
         \label{fig::problems_solved}
 \end{figure}
 
