Truck names were wrong in Data processing section

--- a/secs/2-data/0-subs/0-2_truck_data.tex
+++ b/secs/2-data/0-subs/0-2_truck_data.tex
@@ -50,10 +50,18 @@ be recovered through interpolation.
         \hline \hline
          Truck    & Earlier Data & Latter Data & Mileage \\
          Code     &  Year            & Year    & Difference\\ \hline \hline
-        ADT & $2015$ & $2017$ & $2.8 \times 10^5$\\
-        MES & $2015$ & $2018$ & $11.9 \times 10^5$\\
-        WER & $2015$ & $2017$ & $5.9 \times 10^5$\\
-        TRW & $2015$ & $2016$ & $6.6 \times 10^5$ \\
+        Truck A & $2015$ & $2017$ & $2.8 \times 10^5$\\
+        Truck B & $2015$ & $2018$ & $11.9 \times 10^5$\\
+        Truck C & $2015$ & $2017$ & $5.9 \times 10^5$\\
+        Truck D & $2015$ & $2016$ & $6.6 \times 10^5$ \\
         \hline \hline
         \end{tabular}
 \end{table}
+
+% Truck Maping
+% Truck A - AD Transport (adt)
+% Truck B - Mesilla Valley (mes)
+% Truck C - Werner (wer)
+% Truck D - Transwest (trw)
+% =====
+
